--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | Expenses chart component</title>
-  <link rel="stylesheet" href="style.css">
-  
+  <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
   <div id="expense-chart">
     <!--<header>-->
       <div id="balance-container">
         <div>
-          <div class="title">My balance</div>
+          <h2 class="my-balance">My balance</h2>
           <div class="balance"><span class="balance-amount">$921.48</span></div>
         </div>      
           <img src="./images/logo.svg" alt="circles">
@@ -21,7 +20,7 @@
     <!--</header>-->
     <br>
     <div id="chart-container">
-      <div class="spending">Spending - Last 7 days</div>
+      <h1 class="spending">Spending - Last 7 days</h1>
       <br>
       <br>
       <div class="bar-chart">
